@@ -40,3 +40,8 @@
 # Set the directories in which foomatic-rip should search for CUPS filters:
 # cupsfilterpath: /usr/local/lib/cups/filter:/usr/local/lib/cups/filter:/usr/local/libexec/cups/filter:/opt/cups/filter:/usr/lib/cups/filter
 
+# Set the preferred shell to use when executing FoomaticRIPCommandLine and
+# friends.  Several PPD files use shell constructs that require a more
+# modern shell like bash, zsh, or ksh.
+
+# preferred_shell: /bin/bash
